--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body>
   <p class="red" id="whatevs">This is my cool site!</p>
+  <p>Hello,
+    My name is Noah Preston and I'm origninally from Lincoln, Nebraska.
+    I enjoy reading, going on walks, playing video games, and falling down youtube holes late at night.
+    I'm scuba certified and want to skydive at some point in my life as well.
+  </p>
 </body>
 
 </html>
