updated bio added video

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   <p>Hello,
     My name is Noah Preston and I'm origninally from Lincoln, Nebraska.
     I enjoy reading, going on walks, playing video games, and falling down youtube holes late at night.
-    I'm scuba certified and want to skydive at some point in my life as well.
+    I'm scuba certified and want to skydive at some point in my life as well. I really hope to learn a lot from this
+    course and make new connections and friends!
   </p>
+  <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="external" hreflang="en"
+      type="text/html"> Video of cute cats</a></p>
 </body>
 
 </html>
