--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </p>
   <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="external" hreflang="en"
       type="text/html"> Video of cute cats</a></p>
+  <img src="https://imgur.com/a/mJYB9Qc" alt="A photo of my doggie!">
 </body>
 
 </html>
