fix photo try 2

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="external" hreflang="en"
       type="text/html"> Video of cute cats</a></p>
   <img src="https://imgur.com/a/mJYB9Qc" alt="A photo of my doggie!" width="400" height="400"><img>
+  <blockquote class="imgur-embed-pub" lang="en" data-id="a/mJYB9Qc"><a href="//imgur.com/a/mJYB9Qc">My doggo!</a>
+  </blockquote>
+  <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 </body>
 
 </html>
