--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <p class="red" id="whatevs">This is my cool site!</p>
   <p>Hello,
-    My name is Noah Preston and I'm origninally from Lincoln, Nebraska.
+    My name is Noah Preston and I'm origninally from Lincoln,<strong>Nebraska.</strong>
     I enjoy reading, going on walks, playing video games, and falling down youtube holes late at night.
     I'm scuba certified and want to skydive at some point in my life as well. I really hope to learn a lot from this
     course and make new connections and friends!
